--- a/OsuFootPrint/app/src/main/res/layout/pop.xml
+++ b/OsuFootPrint/app/src/main/res/layout/pop.xml
@@ -8,8 +8,9 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$PlaceholderFragment">
 
+
     <TextView
-        android:text="WISHLIST"
+        android:text="POP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
@@ -41,7 +42,7 @@
         android:layout_height="wrap_content"
         android:text="pop3"
         android:onClick="onClick"
-        android:id="@+id/button"
+        android:id="@+id/test_log"
         android:layout_below="@+id/My_wishlist"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -51,8 +52,8 @@
         android:layout_height="wrap_content"
         android:text="pop4"
         android:onClick="onClick"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button"
+        android:id="@+id/Login_main"
+        android:layout_below="@+id/test_log"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -61,7 +62,7 @@
         android:text="pop5"
         android:onClick="onClick"
         android:id="@+id/button3"
-        android:layout_below="@+id/button2"
+        android:layout_below="@+id/Login_main"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
