--- a/OsuFootPrint3.0/app/src/main/res/layout/activity_main.xml
+++ b/OsuFootPrint3.0/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".Main">
+    tools:context=".Main"
+    android:background="@drawable/background">
 
 
 
@@ -16,21 +17,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/new_user"
-        android:layout_below="@+id/Login_main"
+        android:onClick="onClick"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="97dp"
-        android:onClick="onClick"/>
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/Login_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/log"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="119dp"
-        android:onClick="onClick"/>
+        android:onClick="onClick"
+        android:layout_marginBottom="61dp"
+        android:layout_above="@+id/new_user_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
