--- a/OsuFootPrint3.0/app/src/main/res/layout/activity_new_accounts.xml
+++ b/OsuFootPrint3.0/app/src/main/res/layout/activity_new_accounts.xml
@@ -20,7 +20,7 @@
             android:textSize="15.5sp" />
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/new_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
@@ -34,7 +34,7 @@
             android:textSize="15.5sp" />
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/new_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
