--- a/OsuFootPrint3.0/app/src/main/res/layout/activity_main.xml
+++ b/OsuFootPrint3.0/app/src/main/res/layout/activity_main.xml
@@ -33,4 +33,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <Button
+        android:id="@+id/map_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/open_map"
+        android:onClick="onClick"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
