--- a/OsuFootPrint3.0/app/src/main/res/layout/activity_login.xml
+++ b/OsuFootPrint3.0/app/src/main/res/layout/activity_login.xml
@@ -9,22 +9,16 @@
     tools:context=".MainActivity$PlaceholderFragment"
     android:background="@drawable/background">
 
-    <TextView
-        android:text="You have successfully log in!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView" />
-
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="My footprints"
         android:onClick="onClick"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="91dp"
-        android:id="@+id/my_footprints" />
+        android:id="@+id/my_footprints"
+        android:layout_marginBottom="65dp"
+        android:layout_above="@+id/My_wishlist"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="fill_parent"
@@ -53,6 +47,14 @@
         android:onClick="onClick"
         android:id="@+id/log_out"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Large Text"
+        android:id="@+id/welcome"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
