--- a/OsuFootPrint3.0/app/src/main/res/layout/activity_main.xml
+++ b/OsuFootPrint3.0/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:singleLine="true"
-        android:layout_above="@+id/textView2"
+        android:layout_above="@+id/welcome"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -36,7 +36,7 @@
         android:layout_gravity="left"
         android:text="@string/password"
         android:textSize="15.5sp"
-        android:id="@+id/textView2"
+        android:id="@+id/welcome"
         android:layout_above="@+id/new_password"
         android:layout_alignRight="@+id/textView"
         android:layout_alignEnd="@+id/textView" />
