--- a/OsuFootPrint3.0/app/src/main/res/layout/activity_my_footprint.xml
+++ b/OsuFootPrint3.0/app/src/main/res/layout/activity_my_footprint.xml
@@ -33,20 +33,20 @@
         android:layout_height="wrap_content"
         android:text="footprint2"
         android:onClick="onClick"
-        android:layout_marginTop="108dp"
         android:id="@+id/My_wishlist"
-        android:layout_below="@+id/my_footprints"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="back"
+        android:text="add footprint"
         android:onClick="onClick"
-        android:id="@+id/back_footprints"
-        android:layout_alignParentBottom="true"
+        android:id="@+id/add_footprint"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/textView" />
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
