--- a/OsuFootPrint6.0/app/src/main/res/layout/fragment_new_footprint.xml
+++ b/OsuFootPrint6.0/app/src/main/res/layout/fragment_new_footprint.xml
@@ -78,7 +78,19 @@
             android:textSize="20sp"
             android:hint="Enter your comment"
             />
-        <Button android:id="@+id/new_footprint_confirm"
+        <Button android:id="@+id/camera"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:text="Take pictures"
+            android:textSize="20sp"
+            android:layout_marginTop="32dp"
+            />
+
+        <Button
+            android:id="@+id/new_footprint_confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="16dp"
@@ -87,7 +99,7 @@
             android:text="Confirm"
             android:textSize="20sp"
             android:layout_marginTop="32dp"
-            />
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
 </ScrollView>
 
