--- a/OsuFootPrint6.0/app/src/main/res/layout/fragment_footprint_content.xml
+++ b/OsuFootPrint6.0/app/src/main/res/layout/fragment_footprint_content.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -15,6 +16,12 @@
             android:text="FOOTPRINT"
             android:textSize="36sp"
             style="?android:listViewStyle"/>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="200dip"
+            android:layout_gravity="center"
+            android:contentDescription="@string/image" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
