--- a/OsuFootPrint7.0/app/src/main/res/layout-land/activity_main.xml
+++ b/OsuFootPrint7.0/app/src/main/res/layout-land/activity_main.xml
@@ -1,43 +1,38 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    tools:context=".Main"
-    android:background="@drawable/background">
-
+    android:background="@drawable/background"
+    tools:context=".Main">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:text="@string/username"
-        android:textSize="15.5sp"
+        android:textSize="23sp"
         android:id="@+id/username_textview"
-        android:layout_above="@+id/new_username"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
     <EditText
         android:id="@+id/new_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:singleLine="true"
-        android:layout_above="@+id/password_textview"
+        android:layout_below="@+id/username_textview"
+        android:layout_marginTop="10dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:text="@string/password"
-        android:textSize="15.5sp"
+        android:textSize="23sp"
         android:id="@+id/password_textview"
-        android:layout_above="@+id/new_password"
+        android:layout_below="@+id/new_username"
+        android:layout_marginTop="10dp"
         android:layout_alignRight="@+id/username_textview"
         android:layout_alignEnd="@+id/username_textview" />
 
@@ -47,32 +42,30 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:singleLine="true"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/password_textview"
+        android:layout_marginTop="10dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:id="@+id/Login_main"
-        android:layout_width="match_parent"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:text="@string/log"
         android:onClick="onClick"
-
+        android:id="@+id/Login_main"
+        android:layout_marginTop="48dp"
         android:layout_below="@+id/new_password"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="49dp" />
+        android:layout_toEndOf="@+id/password_textview"
+        android:layout_toRightOf="@+id/password_textview" />
 
     <Button
-        android:id="@+id/new_user_button"
-        android:layout_width="match_parent"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:text="@string/new_user"
         android:onClick="onClick"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="42dp" />
-
-
+        android:id="@+id/new_user_button"
+        android:layout_alignTop="@+id/Login_main"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="61dp" />
 </RelativeLayout>
