--- a/OsuFootPrint7.0/app/src/main/res/layout/activity_login.xml
+++ b/OsuFootPrint7.0/app/src/main/res/layout/activity_login.xml
@@ -13,14 +13,14 @@
         android:text="You have successfully log in!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/username_textview" />
 
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="My footprints"
         android:onClick="onClick"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/username_textview"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="58dp"
