--- a/OsuFootPrint7.0/app/src/main/res/layout/activity_pop_activities.xml
+++ b/OsuFootPrint7.0/app/src/main/res/layout/activity_pop_activities.xml
@@ -14,7 +14,7 @@
         android:text="POP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
+        android:id="@+id/username_textview"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -24,7 +24,7 @@
         android:text="pop1"
         android:onClick="onClick"
         android:id="@+id/my_footprints"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/username_textview"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -92,6 +92,6 @@
         android:onClick="onClick"
         android:id="@+id/back_pop"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/textView" />
+        android:layout_toRightOf="@+id/username_textview" />
 
 </RelativeLayout>
